--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/the-roots-home"]
 	path = themes/the-roots-home
 	url = https://github.com/rmsubekti/the-roots-home.git
+[submodule "themes/researcher"]
+	path = themes/researcher
+	url = https://github.com/ojroques/hugo-researcher.git
